check-based edits/improvements

--- a/vignettes/archR_example.Rmd
+++ b/vignettes/archR_example.Rmd
@@ -25,12 +25,14 @@ knitr::opts_chunk$set(
 ```
 
 # Introduction
-archR is an NMF-based unsupervised learning approach for identifying
-different core promoter architectures. We demonstrated that archR's simple algorithm based on
-chunking and iterative processing successfully uncovers hidden clusters characterized by combinations
-of sequence motifs. To our knowledge, this is a novel application of NMF on sequence data where
-motifs, their positional specificities and complex inter-relationships, all are simultaneously inferred
-from the data.
+archR is an NMF-based unsupervised learning approach for identifying different 
+core promoter architectures. 
+We demonstrated that archR's simple algorithm based
+on chunking and iterative processing successfully uncovers hidden clusters 
+characterized by combinations of sequence motifs. 
+To our knowledge, this is a novel application of NMF on sequence data where
+motifs, their positional specificities and complex inter-relationships, all are 
+simultaneously inferred from the data.
 
 # Working with archR
 ```{r setup-two, echo=TRUE}
@@ -49,7 +51,9 @@ set.seed(seed_val)
 
 ## Synthetic data explained
 
-A set of 1000 simulated DNA sequences, each 200 nucleotides long and with uniform probability for all nucleotides. These sequences have four clusters in them, each with 250 sequences. The profiles of the four clusters is as follows:
+A set of 1000 simulated DNA sequences, each 200 nucleotides long and with 
+uniform probability for all nucleotides. These sequences have four clusters in 
+them, each with 250 sequences. The profiles of the four clusters is as follows:
 
 Cluster A: Dinucleotide `AT` repeated at 10 nt throughout the sequences.
 
@@ -120,22 +124,36 @@ print(Sys.time() - sTime)
 
 ## Understanding the result object from `archR`
 
-In the current version, archR naively returns a result object which is a list of lists.
-The elements include: (a) the sequence cluster labels per iteration; (b) the collection of NMF basis vectors per iteration; (c) the configuration setting used; and (d) the call itself.
+In the current version, archR naively returns a result object which is a list of
+lists.
+The elements include: (a) the sequence cluster labels per iteration; (b) the 
+collection of NMF basis vectors per iteration; (c) the configuration setting 
+used; and (d) the call itself.
 
 ### Sequence cluster labels
-For each sequence, archR provides the cluster label for the sequence in each iteration separated by a hyphen. 
-This is similar to labelling nodes in a tree, in which the label for any node denotes the path from the root to that node traversing intermediate nodes.
-For example, cluster label for a sequence can look like "0-3-1-2". Here, "0" is denotes the root (all data), the sequence was then assigned to cluster 3 in the first iteration (among all sequences in the data set), then to cluster 1 in the second iteration (among sequences in cluster 3 from first iteration), and subsequently, cluster 2.
-For instance, below are the cluster labels for the first 100 sequences in the data.
+For each sequence, archR provides the cluster label for the sequence in each 
+iteration separated by a hyphen. 
+This is similar to labelling nodes in a tree, in which the label for any node 
+denotes the path from the root to that node traversing intermediate nodes.
+For example, cluster label for a sequence can look like "0-3-1-2". Here, "0" is 
+denotes the root (all data), the sequence was then assigned to cluster 3 in the 
+first iteration (among all sequences in the data set), then to cluster 1 in the 
+second iteration (among sequences in cluster 3 from first iteration), and 
+subsequently, cluster 2.
+For instance, below are the cluster labels for the first 100 sequences in the 
+data.
 ```{r archR-result-seqs-clust-labels}
 archRresult$seqsClustLabels[1:100]
 
 ```
 
 ### NMF basis vectors
-archR also stores the NMF basis vectors corresponding to each cluster in every iteration in the lust variable `clustBasisVectors`. `clustBasisVectors` is a numbered list corresponding to the number of iterations performed.
-This is then again a list holding two pieces of information: the number of basis vectors (`nBasisVectors`/`numeric`) and the basis vectors (`basisVectors`/`matrix`).
+archR also stores the NMF basis vectors corresponding to each cluster in every 
+iteration in the lust variable `clustBasisVectors`. `clustBasisVectors` is a 
+numbered list corresponding to the number of iterations performed.
+This is then again a list holding two pieces of information: the number of 
+basis vectors (`nBasisVectors`/`numeric`) and the basis vectors 
+(`basisVectors`/`matrix`).
 
 ```{r archR-result-clust-factors}
 # archRresult$clustFactors
@@ -153,42 +171,51 @@ In this section we demonstrate how to visualize results from archR.
 One can visualize the NMF basis vectors as well as the sequence clusters.
 
 ### Visualizing NMF basis vectors at any iteration
-We can visualize the basis vectors corresponding to each cluster at any iteration. 
-These per-iteration basis vectors are available from the `archRresult` object (see above Section).
+We can visualize the basis vectors corresponding to each cluster at any 
+iteration. 
+These per-iteration basis vectors are available from the `archRresult` object 
+(see above Section).
 
-```{r visualize-basis-vectors-iter1, fig.height=2, fig.width=25, echo=TRUE, message=FALSE, warning=FALSE}
-viz_all_factors_as_seqlogo(archRresult$clustBasisVectors[[1]]$basisVectors, 
-                           position_labels = positions, 
-                           plotMethod = "bits")
+```{r visualize-basis-vectors-iter1, echo=TRUE, fig.height=2, fig.width=25, message=FALSE, warning=FALSE}
+viz_all_factors_as_seqlogo(
+  archRresult$clustBasisVectors[[1]]$basisVectors,
+  position_labels = positions,
+  plotMethod = "bits"
+)
 
-viz_all_factors_as_heatmap(as.matrix(archRresult$clustBasisVectors[[1]]$basisVectors), 
+viz_all_factors_as_heatmap(archRresult$clustBasisVectors[[1]]$basisVectors,
                            position_labels = positions)
 ```
 
 
 ```{r visualize-basis-vectors-iter2, fig.height=2, fig.width=25, echo=TRUE, message=FALSE, warning=FALSE}
-viz_all_factors_as_seqlogo(archRresult$clustBasisVectors[[2]]$basisVectors, 
-                           position_labels = positions, 
-                           plotMethod = "bits")
+viz_all_factors_as_seqlogo(
+  archRresult$clustBasisVectors[[2]]$basisVectors,
+  position_labels = positions,
+  plotMethod = "bits"
+)
 
-viz_all_factors_as_heatmap(as.matrix(archRresult$clustBasisVectors[[2]]$basisVectors),
+viz_all_factors_as_heatmap(archRresult$clustBasisVectors[[2]]$basisVectors,
                            position_labels = positions)
 ```
 
 
-```{r visualize-basis-vectors-combined, fig.height=4, fig.width=25, echo=TRUE, message=FALSE, warning=FALSE}
+```{r visualize-basis-vectors-combined, echo=TRUE, fig.height=4, fig.width=25, message=FALSE, warning=FALSE}
 viz_all_factors_in_combined_heatmaps_seqlogos(
-                           archRresult$clustBasisVectors[[2]]$basisVectors, 
-                           position_labels = positions, 
-                           plotMethod = "bits")
+  archRresult$clustBasisVectors[[2]]$basisVectors,
+  position_labels = positions,
+  plotMethod = "bits"
+)
 ```
-The `plotMethod` argument to functions producing sequence logos is supplied to the call to `ggseqlogo`. The possible values are "custom", "bits".
+The `plotMethod` argument to functions producing sequence logos is supplied to 
+the call to `ggseqlogo`. The possible values are "custom", "bits".
 
 
 # Conclusion
 
-archR can detect de novo sequence features and simultaneously identify the complex
-interactions of different features together with their positional specificities.
+archR can detect de novo sequence features and simultaneously identify the 
+complex interactions of different features together with their positional 
+specificities.
 
 Note that the sequence architectures identified by archR have no limitations 
 due to the size of or gaps in the motifs, distance between motifs, compositional
