--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -25,8 +25,10 @@ knitr::opts_chunk$set(
 ```
 
 # Introduction
-archR is a non-negative matrix factorization (NMF)-based unsupervised learning approach for identifying different core promoter architectures. 
-We demonstrated that archR's simple algorithm based on chunking and iterative processing successfully uncovers hidden clusters characterized by combinations 
+archR is a non-negative matrix factorization (NMF)-based unsupervised learning 
+approach for identifying different core promoter architectures. We demonstrate 
+in this vignette that archR's simple algorithm based on chunking and iterative 
+processing successfully uncovers hidden clusters characterized by combinations 
 of sequence motifs. 
 To our knowledge, this is a novel application of NMF on sequence data where
 motifs, their positional specificities and complex inter-relationships, all are 
@@ -174,7 +176,7 @@ iteration.
 These per-iteration basis vectors are available from the `archRresult` object 
 (see above Section).
 
-```{r visualize-basis-vectors-iter1, echo=TRUE, fig.height=2, fig.width=25, message=FALSE, warning=FALSE}
+```{r viz-BV-1, echo=TRUE, fig.height=2, fig.width=25}
 viz_all_factors_as_seqlogo(
   archRresult$clustBasisVectors[[1]]$basisVectors,
   position_labels = positions,
@@ -186,7 +188,7 @@ viz_all_factors_as_heatmap(archRresult$clustBasisVectors[[1]]$basisVectors,
 ```
 
 
-```{r visualize-basis-vectors-iter2, fig.height=2, fig.width=25, echo=TRUE, message=FALSE, warning=FALSE}
+```{r viz-BV-2, fig.height=2, fig.width=25, echo=TRUE}
 viz_all_factors_as_seqlogo(
   archRresult$clustBasisVectors[[2]]$basisVectors,
   position_labels = positions,
@@ -198,7 +200,7 @@ viz_all_factors_as_heatmap(archRresult$clustBasisVectors[[2]]$basisVectors,
 ```
 
 
-```{r visualize-basis-vectors-combined, echo=TRUE, fig.height=4, fig.width=25, message=FALSE, warning=FALSE}
+```{r visualize-basis-vectors-combined, echo=TRUE, fig.height=4, fig.width=25}
 viz_all_factors_in_combined_heatmaps_seqlogos(
   archRresult$clustBasisVectors[[2]]$basisVectors,
   position_labels = positions,
