--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -44,7 +44,7 @@ devtools::install_github("snikumbh/archR", build_vignettes = TRUE)
 # Working with archR
 ```{r setup-two, echo=TRUE}
 # Load archR
-library(archR)
+#library(archR)
 reticulate::source_python(system.file("python/perform_nmf.py",
                                           package = "archR",
                                           mustWork = TRUE)
@@ -142,15 +142,19 @@ archR::viz_matrix_of_acgt(as.character(tssSeqs_raw),
 ```{r setup-timing, echo=FALSE, eval=TRUE}
 sTime <- Sys.time()
 ```
-```{r call-archR, echo=TRUE}
+```{r setup-archR-config, echo=TRUE}
 # Set archR configuration
 thisConfig <- archR::archRSetConfig(innerChunkSize = 500,
                                     kMin = 1, kMax = 8, parallelize = FALSE, 
                                     cvFolds = 3, nIterationsUse = 10,
                                     nCoresUse = NA)
+```
+
+```{r call-archR, echo=TRUE}
 # Call archR
+ncol(tssSeqs)
 archRresult <- archR::archR(config = thisConfig, 
-                            tss.seqs = tssSeqs)
+                            seqsMat = tssSeqs)
 ```
 ```{r setup-timing-end, echo=FALSE, eval=TRUE}
 print(Sys.time() - sTime)
