--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -38,15 +38,13 @@ _archR_ is currently made available via Github; thus use the following procedure
 for installing _archR_.
 ```{r archR-install, echo=TRUE, eval=FALSE}
 # install.packages("devtools")
-#if (!requireNamespace("archR", quietly = TRUE)) {
 devtools::install_github("snikumbh/archR", build_vignettes = TRUE)
-#}
 ```
 
 # Working with archR
 ```{r setup-two, echo=TRUE}
 # Load archR
-# library(archR)
+library(archR)
 #
 reticulate::source_python(system.file("python/perform_nmf.py",
                                           package = "archR",
@@ -149,8 +147,8 @@ sTime <- Sys.time()
 # Set archR configuration
 thisConfig <- archR::archRSetConfig(innerChunkSize = 500,
                                     kMin = 2, kMax = 8, parallelize = FALSE, 
-                                    cvFolds = 3, nIterationsUse = 20,
-                                    nCoresUse = NA, seedVal = 11223344)
+                                    cvFolds = 3, nIterationsUse = 10,
+                                    nCoresUse = NA, seedVal = 10208090)
 ```
 
 ```{r call-archR, echo=TRUE}
