--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -149,6 +149,7 @@ thisConfig <- archR::archRSetConfig(innerChunkSize = 500,
                                     kMin = 2, kMax = 8, parallelize = FALSE, 
                                     cvFolds = 3, nIterationsUse = 10,
                                     nCoresUse = NA, seedVal = 10208090)
+str(thisConfig)
 ```
 
 ```{r call-archR, echo=TRUE}
